<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.apache.brooklyn</groupId>
        <artifactId>brooklyn-downstream-parent</artifactId>
        <version>1.1.0-SNAPSHOT</version> <!-- BROOKLYN_VERSION -->
    </parent>

    <groupId>io.cloudsoft.brooklyn.tosca</groupId>
    <artifactId>brooklyn-tosca-parent</artifactId>
    <packaging>pom</packaging>
    <version>1.0.0-SNAPSHOT</version>  <!-- BROOKLYN_TOSCA_VERSION -->

    <name>Brooklyn TOSCA parent project</name>

    <modules>
        <module>alien4cloud</module>

        <module>a4c-brooklyn-plugin</module>
        <module>brooklyn-tosca-common</module>
        <module>brooklyn-tosca-transformer</module>
        <module>brooklyn-tosca-dist</module>
        <module>karaf</module>
        <module>qa</module>
    </modules>

    <properties>
        <java.version>1.8</java.version>
        <alien.base.version>1.1.0-SM8</alien.base.version>
        <alien.custom.version>1.1.0-SM8.cloudsoft</alien.custom.version>
        <spring.version>4.1.4.RELEASE</spring.version>
        <mockito-core.version>2.7.12</mockito-core.version>
        <brooklyn.version>1.1.0-SNAPSHOT</brooklyn.version>  <!-- BROOKLYN_VERSION -->
    </properties>

    <scm>
        <url>https://github.com/cloudsoft/brooklyn-tosca/</url>
        <connection>scm:git:https://github.com/cloudsoft/brooklyn-tosca.git</connection>
        <developerConnection>scm:git:git@github.com:cloudsoft/brooklyn-tosca.git</developerConnection>
        <tag>HEAD</tag>
    </scm>

    <repositories>
        <repository>
            <id>apache.snapshots</id>
            <name>Apache Snapshot Repository</name>
            <url>http://repository.apache.org/snapshots</url>
            <releases>
                <enabled>false</enabled>
            </releases>
        </repository>
        <repository>
            <id>cloudsoft-releases</id>
            <url>https://artifactory.cloudsoftcorp.com/artifactory/libs-release-local/</url>
            <releases>
                <enabled>true</enabled>
            </releases>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
<!--
        <repository>
            <id>repo.opensource.fastconnect.org</id>
            <url>http://fastconnect.org/maven/content/repositories/opensource</url>
        </repository>
        <repository>
            <id>repo.opensource.snapshot.fastconnect.org</id>
            <url>http://fastconnect.org/maven/content/repositories/opensource-snapshot</url>
        </repository>
-->
        <repository>  <!-- needed for social/github and maybe others? -->
            <id>spring-milestones</id>
            <name>Spring Milestones</name>
            <url>https://repo.spring.io/milestone</url>
            <snapshots>
                <enabled>false</enabled>
            </snapshots>
        </repository>
    </repositories>

    <distributionManagement>
        <repository>
            <id>sonatype-nexus-staging</id>
            <name>Nexus Release Repository</name>
            <url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
        </repository>
        <snapshotRepository>
            <id>sonatype-nexus-snapshots</id>
            <name>Sonatype Nexus Snapshots</name>
            <url>https://oss.sonatype.org/content/repositories/snapshots/</url>
        </snapshotRepository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.brooklyn</groupId>
                <artifactId>brooklyn-all</artifactId>
                <version>${brooklyn.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.apache.brooklyn</groupId>
                        <artifactId>brooklyn-rest-client</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>

            <dependency>
                <!-- a4c uses an older version of these than brooklyn supplies -->
                <groupId>org.yaml</groupId>
                <artifactId>snakeyaml</artifactId>
                <version>1.17</version>
            </dependency>

            <dependency>
                <!-- includes testng and useful logging for tests -->
                <groupId>org.apache.brooklyn</groupId>
                <artifactId>brooklyn-test-support</artifactId>
                <version>${brooklyn.version}</version>
                <scope>test</scope>
            </dependency>

            <dependency>
                <!-- this gives us flexible and easy-to-use logging; just edit logback-custom.xml! -->
                <groupId>org.apache.brooklyn</groupId>
                <artifactId>brooklyn-logback-xml</artifactId>
                <version>${brooklyn.version}</version>
            </dependency>

            <dependency>
                <groupId>alien4cloud</groupId>
                <artifactId>alien4cloud-core</artifactId>
                <version>${alien.custom.version}</version>
                <exclusions>
                    <exclusion>
                        <groupId>org.slf4j</groupId>
                        <artifactId>slf4j-log4j12</artifactId>
                    </exclusion>
                </exclusions>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <testSourceDirectory>src/test/java</testSourceDirectory>
        <resources>
            <resource>
                <directory>src/main/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </resource>
            <resource>
                <directory>src/main/resources</directory>
            </resource>
        </resources>

        <testResources>
            <testResource>
                <directory>src/test/java</directory>
                <excludes>
                    <exclude>**/*.java</exclude>
                </excludes>
            </testResource>
            <testResource>
                <directory>src/test/resources</directory>
            </testResource>
        </testResources>

        <pluginManagement>
            <plugins>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-surefire-plugin</artifactId>
                    <version>${surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-failsafe-plugin</artifactId>
                    <version>${surefire.version}</version>
                </plugin>
                <plugin>
                    <groupId>org.apache.maven.plugins</groupId>
                    <artifactId>maven-compiler-plugin</artifactId>
                    <version>3.6.0</version>
                    <configuration>
                        <source>${java.version}</source>
                        <target>${java.version}</target>
                    </configuration>
                </plugin>
                <plugin>
                    <artifactId>maven-clean-plugin</artifactId>
                    <version>3.0.0</version>
                </plugin>
            </plugins>
        </pluginManagement>
        <plugins>
            <plugin>
                <artifactId>maven-clean-plugin</artifactId>
                <configuration>
                    <filesets>
                        <fileset>
                            <directory>.</directory>
                            <includes>
                                <include>brooklyn*.log</include>
                                <include>brooklyn*.log.*</include>
                            </includes>
                        </fileset>
                    </filesets>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <configuration>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                    <excludes>
                        <exclude>**/*IntegrationTest.java</exclude>
                    </excludes>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>org.apache.brooklyn.test.support.LoggingVerboseReporter</value>
                        </property>
                    </properties>
                    <enableAssertions>true</enableAssertions>
                    <testFailureIgnore>false</testFailureIgnore>
                    <systemPropertyVariables>
                        <verbose>-1</verbose>
                    </systemPropertyVariables>
                    <printSummary>true</printSummary>
                </configuration>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-failsafe-plugin</artifactId>
                <configuration>
                    <includes>
                        <include>**/*IntegrationTest.java</include>
                    </includes>
                    <argLine>-Xms256m -Xmx512m -XX:MaxPermSize=512m</argLine>
                    <properties>
                        <property>
                            <name>listener</name>
                            <value>org.apache.brooklyn.test.support.LoggingVerboseReporter</value>
                        </property>
                    </properties>
                    <enableAssertions>true</enableAssertions>
                    <groups>${includedTestGroups}</groups>
                    <excludedGroups>${excludedTestGroups}</excludedGroups>
                    <testFailureIgnore>false</testFailureIgnore>
                    <systemPropertyVariables>
                        <verbose>-1</verbose>
                    </systemPropertyVariables>
                    <printSummary>true</printSummary>
                </configuration>
                <executions>
                    <execution>
                        <id>integration-tests</id>
                        <goals>
                            <goal>integration-test</goal>
                            <goal>verify</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-checkstyle-plugin</artifactId>
                <version>2.17</version>
                <executions>
                    <execution>
                        <id>verify-style</id>
                        <phase>process-classes</phase>
                        <goals>
                            <goal>check</goal>
                        </goals>
                    </execution>
                </executions>
                <configuration>
                    <logViolationsToConsole>true</logViolationsToConsole>
                    <checkstyleRules>
                        <module name="Checker">
                            <module name="FileTabCharacter">
                                <property name="eachLine" value="true" />
                            </module>
                            <module name="TreeWalker">
                                <module name="IllegalImport">
                                    <property name="illegalPkgs" value="com.google.api.client,org.python.google" />
                                </module>
                            </module>
                        </module>
                    </checkstyleRules>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>cloudsoft-release</id>
            <activation>
                <property>
                    <name>brooklyn.deployTo</name>
                    <value>cloudsoft</value>
                </property>
            </activation>
            <distributionManagement>
                <repository>
                    <id>cloudsoft-deploy-artifactory-release</id>
                    <name>Cloudsoft Artifactory libs-release-local repo</name>
                    <url>http://artifactory.cloudsoftcorp.com/artifactory/libs-release-local/</url>
                </repository>
                <snapshotRepository>
                    <id>cloudsoft-deploy-artifactory-snapshot</id>
                    <name>Cloudsoft Artifactory libs-snapshot-local repo</name>
                    <url>http://artifactory.cloudsoftcorp.com/artifactory/libs-snapshot-local/</url>
                </snapshotRepository>
            </distributionManagement>
        </profile>

    </profiles>

</project>
